# NexusFlow

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/eng/: about.md  api-modules.md  architecture.md  mvp-scope.md  roadmap.md
docs/ru/: 1-about.md  2-mvp-scope.md  3-api-modules.md  4-architecture.md  5-roadmap.md
src/nexusflow/: main.py
src/nexusflow/api/: router.py
src/nexusflow/core/: config.py  logging.py
src/nexusflow/db/: session.py
src/nexusflow/db/migrations/: env.py
tests/: test_health.py
