[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexusflow"
version = "0.1.0"
description = "NexusFlow backend API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "NexusFlow" }]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "SQLAlchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "pre-commit>=3.7.0",
  "virtualenv>=20.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexusflow"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["N818"]

[tool.ruff.lint.isort]
known-first-party = ["nexusflow"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
